--- a/main.ipynb
+++ b/main.ipynb
@@ -85,6 +85,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction\n",
+    "\n",
+    "The vision component of our project plays a crucial role in detecting the region of interest (ROI) and end-point, facilitating the seamless interaction between the Thymio robot and its environment. In this section, we detail the vision pipeline, encompassing Aruco marker detection, perspective transformation, and obstacle detection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aruco Marker Creation\n",
+    "Before delving into the vision pipeline, we commence by designing and crafting markers that will play a pivotal role in the detection process. We have chosen to utilize the Aruco environment due to its ease of use and effectiveness."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "aruco_dict = cv2.aruco.getPredefinedDictionary(cv2.aruco.DICT_6X6_50)\n",
+    "\n",
+    "id = 47 # This is the identifier of the bookmark, you can change it to whatever you need\n",
+    "img_size = 700 # Define the size of the final image\n",
+    "marker_img = cv2.aruco.generateImageMarker(aruco_dict, id, img_size)\n",
+    "\n",
+    "cv2.imwrite('aruco{}.png'.format(id), marker_img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perspective Transformation\n",
+    "To establish an accurate representation of the detected ROI and Thymio's environment, a perspective transformation is applied. This involves computing the transformation matrix based on the detected Aruco markers, enabling the correction of distortions and ensuring a consistent viewpoint.\n",
+    "\n",
+    "We now proceed to compute the transformation. The objective is to derive the transformation matrix, denoted as M, for seamless utilization in subsequent steps, particularly within the get_ROI function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perspective_correction(image):\n",
+    "    detected = cv2.aruco.detectMarkers(image, arucoDict, parameters=arucoParams)\n",
+    "    corners = [None]*4\n",
+    "    for (id, idx) in corner_ids.items():\n",
+    "      (center, _) = get_pos_aruco(detected, id)\n",
+    "      if center is not None:\n",
+    "        corners[idx] = center\n",
+    "      else:\n",
+    "        return None\n",
+    "\n",
+    "    # Do perspective correction\n",
+    "    pts1 = np.array([corners[0], corners[1], corners[3], corners[2]])\n",
+    "    pts2 = np.float32([[res_h,res_w], [0, res_w], [res_h, 0], [0, 0]])\n",
+    "\n",
+    "    return cv2.getPerspectiveTransform(pts1,pts2)\n",
+    "\n",
+    "\n",
+    "def get_ROI(img, M): \n",
+    "    return cv2.warpPerspective(img,M,(res_h,res_w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obstacle Detection\n",
+    "Having corrected the perspective, our next step involves obstacle detection within the Region of Interest (ROI). Initially, we focus on computing the positions of both the Thymio and the destination."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Thymio and destination position finding : \n",
+    "For detecting the Thymio, it is essential to compute the center, border, and angle of the Aruco marker. The computation is performed as follows: #todo -> decrire comment compute angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_thymio(detected):\n",
+    "  # Detect aruco\n",
+    "  (center, c) = get_pos_aruco(detected, thymio_id)\n",
+    "\n",
+    "  if center is None:\n",
+    "    return (None, None, None)\n",
+    "\n",
+    "  #compute the direction : \n",
+    "  v1 = c[1] - c[0]\n",
+    "  v2 = c[2] - c[3]\n",
+    "  dir = (v1 + v2)/2\n",
+    "  angle = np.arctan2(dir[1], dir[0])\n",
+    "  \n",
+    "  return (c, center, angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_end_point(detected):\n",
+    "  (center, corners) = get_pos_aruco(detected, end_point_id)\n",
+    "  if center is None:\n",
+    "    return None\n",
+    "  return (corners,center)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A threshold on the red channel of the image is employed to identify obstacles. The thresholding operation simplifies the detection of objects with specific color characteristics. Our approach suggests to fine tune the thresholding thanks to a slider."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_image_red(image, red_threshold):\n",
+    "    red_channel = image[:, :, 0].copy()  # Create a copy of the red channel\n",
+    "    red_channel[red_channel > red_threshold] = 0\n",
+    "    _, binary = cv2.threshold(red_channel, 1, 255, cv2.THRESH_BINARY)\n",
+    "    return binary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The vision module, incorporating Aruco marker detection, perspective transformation, and obstacle detection, serves as a critical component in enhancing the Thymio robot's understanding of its environment. This integrated approach enables precise localization, ensuring effective navigation and interaction capabilities."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
