--- a/main.ipynb
+++ b/main.ipynb
@@ -347,11 +347,11 @@
    "source": [
     "\n",
     "<center>\n",
-    "<img src=\"ImgRapport/global_3.png\" alt=\"Map From Vision\" width=\"300\"/>\n",
+    "<img src=\"ImgRapport/OptimalPath.png\" alt=\"Map From Vision\" width=\"300\"/>\n",
     "<img src=\"ImgRapport/erroded_path.png\" alt=\"Map From Vision\" width=\"300\"/>\n",
     "</center>\n",
     "\n",
-    "We then run a Dijkstra algorithm on the generated graph to find the shortest path which we want to follow. On the left, a result of an optimal path with all connections is shown. On the right, an example is shown using the erroded polygons."
+    "We then run a Dijkstra algorithm on the generated graph to find the shortest path which we want to follow. On the left, a result of an optimal path with all connections is shown. On the right, an example is shown using the erroded polygons as background."
    ]
   },
   {
