--- a/Report.ipynb
+++ b/Report.ipynb
@@ -34,9 +34,6 @@
     "        <li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction\"><span class=\"toc-item-num\">1.&nbsp;&nbsp;</span>Introduction</a></span></li>\n",
     "    </ul>\n",
     "    <ul class=\"toc-item\">\n",
-    "        <li><a href=\"#Project-summary-,-hardware-and-choices\" data-toc-modified-id=\"Project-summary-,-hardware-and-choices-2\"><span class=\"toc-item-num\">2.&nbsp;&nbsp;</span>Project summary, hardware and choices</a></li>\n",
-    "    </ul>\n",
-    "    <ul class=\"toc-item\">\n",
     "        <li><span><a href=\"#Vision\" data-toc-modified-id=\"Vision-3\"><span class=\"toc-item-num\">3.&nbsp;&nbsp;</span>Vision</a></span></li>\n",
     "    </ul>\n",
     "    <ul class=\"toc-item\">\n",
@@ -385,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# III. Global navigation\n",
+    "# III. Global-navigation\n",
     "<a class=\"anchor\" id=\"Global-navigation\"></a>"
    ]
   },
@@ -505,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IV. Local Navigation\n",
+    "# IV. Local-navigation\n",
     "<a class=\"anchor\" id=\"Local-navigation\"></a>"
    ]
   },
@@ -1007,7 +1004,7 @@
    "metadata": {},
    "source": [
     "# VII . Test\n",
-    "<a class=\"anchor\" id=\"Conclusion\"></a>"
+    "<a class=\"anchor\" id=\"Test\"></a>"
    ]
   },
   {
